--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book manager</title>
+    <link rel="icon" href="%PUBLIC_URL%/book.ico" />
   </head>
   <body>
     <div id="root"></div>
